@@ -18,9 +18,12 @@ gnome_thumbnail_font_SOURCES = ftstream-vfs.c thumbnailer.c
 gnome_font_viewer_LDADD = $(FONT_VIEW_LIBS)
 gnome_font_viewer_SOURCES = ftstream-vfs.c font-view.c
 
-libexec_PROGRAMS = fontilus-context-menu
-fontilus_context_menu_LDADD = $(FONT_CONTEXT_MENU_LIBS)
-fontilus_context_menu_SOURCES = fontilus-context-menu.c
+nautilusdir = $(libdir)/nautilus/extensions-1.0
+nautilus_LTLIBRARIES = libnautilus-fontilus.la
+libnautilus_fontilus_la_LDFLAGS = -module -avoid-version \
+  -export-symbols-regex 'nautilus_module_.*'
+libnautilus_fontilus_la_LIBADD = $(FONT_CONTEXT_MENU_LIBS)
+libnautilus_fontilus_la_SOURCES = fontilus-context-menu.c
 
 vfsmoduleconfdir = $(sysconfdir)/gnome-vfs-2.0/modules
 vfsmoduleconf_DATA = font-method.conf
@@ -37,15 +40,9 @@ appreg_DATA = fontilus.applications
 schemasdir = $(GCONF_SCHEMA_FILE_DIR)
 schemas_DATA = fontilus.schemas
 
-serverdir = $(libdir)/bonobo/servers
-server_DATA = fontilus.server
-fontilus.server.in: fontilus.server.in.in
-	sed -e "s|\@LIBEXECDIR\@|$(libexecdir)|" $< > $@
-
 desktopdir = $(datadir)/applications
 desktop_in_files = gnome-font-viewer.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
-@INTLTOOL_DESKTOP_RULE@
 
 if GCONF_SCHEMAS_INSTALL
 install-data-local:
@@ -56,9 +53,9 @@ else
 install-data-local:
 endif
 
+@INTLTOOL_DESKTOP_RULE@
 @INTLTOOL_DIRECTORY_RULE@
 @INTLTOOL_SCHEMAS_RULE@
-@INTLTOOL_SERVER_RULE@
 
 EXTRA_DIST = \
   font-method.conf \
@@ -66,7 +63,6 @@ EXTRA_DIST = \
   fontilus.keys \
   fontilus.mime \
   fontilus.applications \
-  fontilus.server.in.in \
   fontilus.schemas	\
   fontilus.schemas.in \
   gnome-font-viewer.desktop.in
